tests/baselines/reference/parser579071.errors.txt
tests/cases/conformance/parser/ecmascript5/RegressionTests/parser579071.ts(1,15): error TS17006: Invalid regular expression literal.


==== tests/cases/conformance/parser/ecmascript5/RegressionTests/parser579071.ts (1 errors) ====
    var x = /fo(o/;
                  
!!! error TS17006: Invalid regular expression literal.